--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,8 @@ set(CMAKE_CXX_EXTENSIONS OFF) # Helps cross compilation/portability
 add_executable(Stranded
     src/main.cpp
     src/Player.cpp
+    src/Dialogue.cpp
+    src/GameLayout.cpp
 )
 
 target_include_directories(Stranded PUBLIC
